Final Brief task points number :- 1,3,6,7,8,10,11,13

--- a/blog.html
+++ b/blog.html
@@ -58,259 +58,108 @@
     <!-- BEGIN HEADER -->
     <header class="header">
       <div class="header__main">
-        <div class="header__cols">
-          <div class="header__left">
-            <div class="header__col">
-              <button class="mob-button js-mob-open">
-                <span class="mob-button__icon"></span>
-              </button>
-            </div>
-            <div class="header__col">
-              <a class="mob__logo logo" href="#">
-                <img class="logo__image" src="https://via.placeholder.com/82x17" alt="" />
-              </a>
-            </div>
-          </div>
-          <div class="header__center">
-            <div class="header__cols">
-              <div class="header__col header__col_hide-mob">
-                <nav class="header-nav">
-                  <ul class="header-nav__list">
-                    <li class="header-nav__item js-nav-item">
-                      <a class="header-nav__link header-nav__link_arrow js-nav-button" href="shop.html">Shop</a>
-                      <div class="hide-nav js-nav-hide">
-                        <div class="clearfix">
-                          <ul class="hide-nav__list hide-nav__list_wrap">
-                            <li class="hide-nav__item">
-                              <label>Shop Pages</label>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="#">Shop Page V1</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="#">Shop Page V2</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="#">Shop Page V3</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="#">Shop Page V4</a>
-                            </li>
-                          </ul>
-                          <ul class="hide-nav__list hide-nav__list_wrap">
-                            <li class="hide-nav__item">
-                              <label>Procut Pages</label>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="cart.html">Single Product V1</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="#">Single Product V2</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="#">Single Product V3</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="#">Single Product V4</a>
-                            </li>
-                          </ul>
-                          <div class="hide-nav__list hide-nav__image__wrap text-right">
-                            <a href="" class="hide-nav-collecton__image">
-                              <img src="assets/img/collection/collection.jpeg" alt="" />
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li class="header-nav__item">
-                      <a class="header-nav__link" href="our_story.html">Our Story</a>
-                    </li>
-                    <li class="header-nav__item logo_nav">
-                      <div class="header__col text-center">
-                        <a class="logo" href="index.html">
-                          <h3>Logo</h3>
-                        </a>
-                      </div>
-                    </li>
-                    <li class="header-nav__item">
-                      <a class="header-nav__link" href="about.html">About us</a>
-                    </li>
-                    <li class="header-nav__item">
-                      <a class="header-nav__link" href="contacts.html">Contact us</a>
-                    </li>
-                  </ul>
-                </nav>
+          <div class="header__cols">
+              <div class="header__left">
+                  <div class="header__col">
+                      <button class="mob-button js-mob-open">
+                          <span class="mob-button__icon"></span>
+                      </button>
+                  </div>
+                  <div class="header__col">
+                      <a class="mob__logo logo" href="#">
+                          <img class="logo__image" src="https://via.placeholder.com/82x17" alt="" />
+                      </a>
+                  </div>
               </div>
-            </div>
+              <div class="header__center">
+                  <div class="header__cols">
+                      <div class="header__col header__col_hide-mob">
+                          <button class="hide-mob__close close-button js-mob-close"></button>
+                          <nav class="header-nav">
+                              <ul class="header-nav__list">
+                                  <li class="header-nav__item js-nav-item">
+                                      <a class="header-nav__link header-nav__link_arrow js-nav-button"
+                                          href="shop.html">Shop</a>
+                                      <div class="hide-nav js-nav-hide">
+                                          <div class="clearfix">
+                                              <ul class="hide-nav__list hide-nav__list_wrap">
+                                                  <li class="hide-nav__item">
+                                                      <label>Shop Pages</label>
+                                                  </li>
+                                                  <li class="hide-nav__item">
+                                                      <a class="hide-nav__link" href="#">Shop Page V1</a>
+                                                  </li>
+                                                  <li class="hide-nav__item">
+                                                      <a class="hide-nav__link" href="#">Shop Page V2</a>
+                                                  </li>
+                                                  <li class="hide-nav__item">
+                                                      <a class="hide-nav__link" href="#">Shop Page V3</a>
+                                                  </li>
+                                                  <li class="hide-nav__item">
+                                                      <a class="hide-nav__link" href="#">Shop Page V4</a>
+                                                  </li>
+                                              </ul>
+                                              <ul class="hide-nav__list hide-nav__list_wrap">
+                                                  <li class="hide-nav__item">
+                                                      <label>Procut Pages</label>
+                                                  </li>
+                                                  <li class="hide-nav__item">
+                                                      <a class="hide-nav__link" href="cart.html">Single Product
+                                                          V1</a>
+                                                  </li>
+                                                  <li class="hide-nav__item">
+                                                      <a class="hide-nav__link" href="#">Single Product V2</a>
+                                                  </li>
+                                                  <li class="hide-nav__item">
+                                                      <a class="hide-nav__link" href="#">Single Product V3</a>
+                                                  </li>
+                                                  <li class="hide-nav__item">
+                                                      <a class="hide-nav__link" href="#">Single Product V4</a>
+                                                  </li>
+                                              </ul>
+                                              <div class="hide-nav__list hide-nav__image__wrap text-right">
+                                                  <a href="" class="hide-nav-collecton__image">
+                                                      <img src="assets/img/collection/collection.jpeg" alt="" />
+                                                  </a>
+                                              </div>
+                                          </div>
+                                      </div>
+                                  </li>
+                                  <li class="header-nav__item active">
+                                      <a class="header-nav__link" href="our_story.html">Our Story</a>
+                                  </li>
+                                  <li class="header-nav__item logo_nav">
+                                      <div class="header__col text-center">
+                                          <a class="logo" href="index.html">
+                                              <h3>Logo</h3>
+                                          </a>
+                                      </div>
+                                  </li>
+                                  <li class="header-nav__item">
+                                      <a class="header-nav__link" href="about.html">About us</a>
+                                  </li>
+                                  <li class="header-nav__item">
+                                      <a class="header-nav__link" href="contacts.html">Contact us</a>
+                                  </li>
+                              </ul>
+                          </nav>
+                      </div>
+                  </div>
+              </div>
+              <div class="header__right">
+                  <ul class="user-nav">
+                      <li class="user-nav__item">
+                          <a class="user-nav__link" href="wishlist.html">
+                              <span class="user-nav__icon user-nav__icon_3"></span>
+                              <span class="user-nav__text" id="wishlistCount">0</span>
+                          </a>
+                      </li>
+                  </ul>
+              </div>
           </div>
-          <div class="header__right">
-            <ul class="user-nav">
-              <li class="user-nav__item">
-                <a class="user-nav__link" href="wishlist.html">
-                  <span class="user-nav__icon user-nav__icon_3"></span>
-                  <span class="user-nav__text">0</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
-    </header>
-    <!-- HEADER END -->
-
-    <!-- MOBILE NAVIGATION -->
-    <div class="hide-mob js-mob-hide">
-      <div class="hide-mob__bg">
-        <button class="hide-mob__close close-button js-mob-close"></button>
-        <div class="hide-mob__mask js-mob-close"></div>
-        <ul class="mob-nav">
-          <li class="mob-nav__item">
-            <a class="mob-nav__link" href="index.html">Home</a>
-          </li>
-          <li class="mob-nav__item js-slidedown">
-            <a class="mob-nav__link js-slidedown-button" href="shop.html">
-              <span class="mob-nav__arrow">Shop</span>
-            </a>
-            <div class="slide-nav js-slidedown-hide">
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <label class="slide-nav__title_label">Shop Pages</label>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Shop Page V1</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Shop Page V2</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Shop Page V3</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Shop Page V4</a>
-                </li>
-              </ul>
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <label class="slide-nav__title_label">Prodcut Pages</label>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Prodcut Page V1</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Prodcut Page V2</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Prodcut Page V3</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Prodcut Page V4</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="mob-nav__item">
-            <a class="mob-nav__link" href="shop.html">Collection</a>
-          </li>
-          <li class="mob-nav__item js-slidedown">
-            <a class="mob-nav__link js-slidedown-button" href="about.html">
-              <span class="mob-nav__arrow">Pages</span>
-            </a>
-            <div class="slide-nav js-slidedown-hide">
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <label class="slide-nav__title_label">Page Set 1</label>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="about.html">About us</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="shop.html">Catalog</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="product_page.html">Product Page</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="wishlist.html">Wishlist</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="my_profile.html">My Profile</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="404.html">404</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="privacy_policy.html">Privacy Policy</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="terms_of_use.html">Terms of Use</a>
-                </li>
-              </ul>
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <label class="slide-nav__title_label">Page Set 2</label>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="Login.html">Login</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="registration.html">Registration</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="faq.html">FAQ's</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="cart.html">Cart</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="checkout-1.html">Checkout 1</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="checkout-2.html">Checkout 2</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="checkout-3.html">Checkout 3</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="mob-nav__item js-slidedown">
-            <a class="mob-nav__link js-slidedown-button" href="blog.html">
-              <span class="mob-nav__arrow">Blog</span>
-            </a>
-            <div class="slide-nav js-slidedown-hide">
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item active">
-                  <a class="slide-nav__link" href="blog.html">Blog</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="post.html">Blog Post</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="mob-nav__item">
-            <a class="mob-nav__link" href="contacts.html">Contact</a>
-          </li>
-        </ul>
-        <div class="hide-mob__socials">
-          <ul class="socials__list socials__list_center">
-            <li class="socials__item">
-              <a class="socials__link" href="#">Fb</a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link" href="#">Tw</a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link" href="#">Ins</a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link" href="#">Pt</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- MOBILE NAVIGATION END -->
+  </header>
+  <!-- HEADER END -->
 
     <!-- BEGIN MAIN -->
     <main class="main">
@@ -335,7 +184,7 @@
           </div>
           <img class="inner-top__bg"
             src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-            data-lazy="assets/img/svg/vector-inner-top.svg" alt="" />
+            data-lazy="assets/img/svg/vector-inner-top.png" alt="" />
         </div>
       </div>
       <!-- INNER TOP END -->
