--- a/post.html
+++ b/post.html
@@ -338,7 +338,7 @@
           </div>
           <img class="inner-top__bg"
             src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-            data-lazy="assets/img/svg/vector-inner-top.svg" alt="" />
+            data-lazy="assets/img/svg/vector-inner-top.png" alt="" />
         </div>
       </div>
       <!-- INNER TOP END -->
