--- a/shop.html
+++ b/shop.html
@@ -74,9 +74,10 @@
           <div class="header__center">
             <div class="header__cols">
               <div class="header__col header__col_hide-mob">
+                <button class="hide-mob__close close-button js-mob-close"></button>
                 <nav class="header-nav">
                   <ul class="header-nav__list">
-                    <li class="header-nav__item js-nav-item active">
+                    <li class="header-nav__item js-nav-item">
                       <a class="header-nav__link header-nav__link_arrow js-nav-button" href="shop.html">Shop</a>
                       <div class="hide-nav js-nav-hide">
                         <div class="clearfix">
@@ -102,7 +103,8 @@
                               <label>Procut Pages</label>
                             </li>
                             <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="cart.html">Single Product V1</a>
+                              <a class="hide-nav__link" href="cart.html">Single Product
+                                V1</a>
                             </li>
                             <li class="hide-nav__item">
                               <a class="hide-nav__link" href="#">Single Product V2</a>
@@ -122,7 +124,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="header-nav__item">
+                    <li class="header-nav__item active">
                       <a class="header-nav__link" href="our_story.html">Our Story</a>
                     </li>
                     <li class="header-nav__item logo_nav">
@@ -148,7 +150,7 @@
               <li class="user-nav__item">
                 <a class="user-nav__link" href="wishlist.html">
                   <span class="user-nav__icon user-nav__icon_3"></span>
-                  <span class="user-nav__text" id="user-nav__text">0</span>
+                  <span class="user-nav__text" id="wishlistCount">0</span>
                 </a>
               </li>
             </ul>
@@ -157,160 +159,6 @@
       </div>
     </header>
     <!-- HEADER END -->
-
-    <!-- MOBILE NAVIGATION -->
-    <div class="hide-mob js-mob-hide">
-      <div class="hide-mob__bg">
-        <button class="hide-mob__close close-button js-mob-close"></button>
-        <div class="hide-mob__mask js-mob-close"></div>
-        <ul class="mob-nav">
-          <li class="mob-nav__item">
-            <a class="mob-nav__link" href="index.html">Home</a>
-          </li>
-          <li class="mob-nav__item js-slidedown">
-            <a class="mob-nav__link js-slidedown-button" href="shop.html">
-              <span class="mob-nav__arrow">Shop</span>
-            </a>
-            <div class="slide-nav js-slidedown-hide">
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <label class="slide-nav__title_label">Shop Pages</label>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Shop Page V1</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Shop Page V2</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Shop Page V3</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Shop Page V4</a>
-                </li>
-              </ul>
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <label class="slide-nav__title_label">Prodcut Pages</label>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Prodcut Page V1</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Prodcut Page V2</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Prodcut Page V3</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="#">Prodcut Page V4</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="mob-nav__item">
-            <a class="mob-nav__link" href="shop.html">Collection</a>
-          </li>
-          <li class="mob-nav__item js-slidedown">
-            <a class="mob-nav__link js-slidedown-button" href="about.html">
-              <span class="mob-nav__arrow">Pages</span>
-            </a>
-            <div class="slide-nav js-slidedown-hide">
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <label class="slide-nav__title_label">Page Set 1</label>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="about.html">About us</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="shop.html">Catalog</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="product_page.html">Product Page</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="wishlist.html">Wishlist</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="my_profile.html">My Profile</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="404.html">404</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="privacy_policy.html">Privacy Policy</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="terms_of_use.html">Terms of Use</a>
-                </li>
-              </ul>
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <label class="slide-nav__title_label">Page Set 2</label>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="Login.html">Login</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="registration.html">Registration</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="faq.html">FAQ's</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="cart.html">Cart</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="checkout-1.html">Checkout 1</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="checkout-2.html">Checkout 2</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="checkout-3.html">Checkout 3</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="mob-nav__item js-slidedown">
-            <a class="mob-nav__link js-slidedown-button" href="blog.html">
-              <span class="mob-nav__arrow">Blog</span>
-            </a>
-            <div class="slide-nav js-slidedown-hide">
-              <ul class="slide-nav__list">
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="blog.html">Blog</a>
-                </li>
-                <li class="slide-nav__item">
-                  <a class="slide-nav__link" href="post.html">Blog Post</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="mob-nav__item">
-            <a class="mob-nav__link" href="contacts.html">Contact</a>
-          </li>
-        </ul>
-        <div class="hide-mob__socials">
-          <ul class="socials__list socials__list_center">
-            <li class="socials__item">
-              <a class="socials__link" href="#">Fb</a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link" href="#">Tw</a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link" href="#">Ins</a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link" href="#">Pt</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- MOBILE NAVIGATION END -->
 
     <!-- BEGIN MAIN -->
     <main class="main">
@@ -351,27 +199,13 @@
               </div>
             </div>
             <div class="inner-catalog" id="shortItemAll"></div>
-
-            <div class="page-nav">
-              <div class="page-nav__col">
-                <a class="page-nav__button prev-button" href="#"></a>
-              </div>
-              <div class="page-nav__col">
-                <ul class="page-nav__list">
-                  <li class="page-nav__item active">
-                    <a class="page-nav__link" href="#">1</a>
-                  </li>
-                  <li class="page-nav__item">
-                    <a class="page-nav__link" href="#">2</a>
-                  </li>
-                  <li class="page-nav__item">
-                    <a class="page-nav__link" href="#">3</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="page-nav__col">
-                <a class="page-nav__button next-button" href="#"></a>
-              </div>
+            <div class="row justify-content-center">
+              <a class="button" href="javascript:void(0)" id="loadMore">
+                <span class="button__text">Show More</span>
+              </a>
+              <a class="button" href="javascript:void(0)" id="showLess">
+                <span class="button__text">Show Less</span>
+              </a>
             </div>
           </div>
           <!-- RIGHT COLUMN END -->
@@ -567,6 +401,7 @@
         }
         shortItemAll.innerHTML = shortItemAllCreate;
       }
+
     };
 
     function selectCollectionsList(type) {
@@ -624,7 +459,7 @@
         } else {
           isActive = ''
         }
-        shortItemAllCreate += `<article class='short-item'>`;
+        shortItemAllCreate += `<article class='shop-product_short_item short-item'>`;
         shortItemAllCreate += `<div class='short-item__all'>`;
         shortItemAllCreate += `<div class='short-item__product'>`;
         shortItemAllCreate += `<a class='short-item__image-bg' onclick='redirectToProductPage(${myArray[i].id})'>`;
@@ -649,21 +484,38 @@
         shortItemAllCreate += `</h4>`;
         shortItemAllCreate += `<span class='short-item__price'>${myArray[i].price}</span>`;
         shortItemAllCreate += `<span class='short-item__old-price'>${myArray[i]["strikethrough-price"]}</span>`;
-        shortItemAllCreate += `<div class='short-item__color-group'>`;
-        shortItemAllCreate += `<a href='javascript:void(0)' class='circle gray'></a>`;
-        shortItemAllCreate += `<a href='javascript:void(0)' class='circle yellow active'></a>`;
-        shortItemAllCreate += `<a href='javascript:void(0)' class='circle white'></a>`;
-        shortItemAllCreate += `</div>`;
+
         shortItemAllCreate += `</div>`;
         shortItemAllCreate += `</div>`;
         shortItemAllCreate += `</article>`;
       }
       shortItemAll.innerHTML = shortItemAllCreate;
 
-      $(function () {
-        $(".short-item__color-group .circle").on("click", function () {
-          $(this).siblings(this).removeClass("active").end().addClass("active");
+      $(document).ready(function () {
+        product_box = $(".short-item").size();
+        product = 3;
+
+        function showLessButton() {
+          if (product <= 4) {
+            $('#showLess').hide();
+          }
+          else {
+            $('#showLess').show();
+          }
+        }
+
+        $('.short-item:lt(' + product + ')').show();
+        $('#loadMore').click(function () {
+          product = (product + 3 <= product_box) ? product + 3 : product_box;
+          $('.short-item:lt(' + product + ')').show();
+          showLessButton();
         });
+        $('#showLess').click(function () {
+          product = (product - 3 < 0) ? 3 : product - 3;
+          $('.short-item').not(':lt(' + product + ')').hide();
+          showLessButton();
+        });
+        showLessButton();
       });
     }
 
