--- a/shop.html
+++ b/shop.html
@@ -124,7 +124,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="header-nav__item active">
+                    <li class="header-nav__item">
                       <a class="header-nav__link" href="our_story.html">Our Story</a>
                     </li>
                     <li class="header-nav__item logo_nav">
@@ -493,6 +493,7 @@
 
       $(document).ready(function () {
         product_box = $(".short-item").size();
+        console.log('product_box', product_box)
         product = 3;
 
         function showLessButton() {
