--- a/about.html
+++ b/about.html
@@ -215,6 +215,114 @@
       </article>
       <!-- ABOUT COMPANY END -->
 
+      <!-- TEMA SECTION START -->
+      <div class="team-wrapper wrapper">
+        <div class="main-block__top">
+          <span class="main-block__subtitle category-subtitle"><b>Our</b> Team</span>
+          <h3 class="main-block__title">Best Seller at Organization </h3>
+          <p class="main-block__text">
+            Cillum eu id enim aliquip aute ullamco anim. Culpa deserunt nostrud excepteur voluptate velit ipsum esse
+            enim.
+          </p>
+        </div>
+        <div class="team-ul">
+          <div class="team-card__item">
+            <div class="team-card_member_image">
+              <img src="assets/img/team/team-member-1.jpeg" alt="">
+            </div>
+            <div class="team-card__content">
+              <label>ART DIRECTOR</label>
+              <h3>John Gonzalez</h3>
+            </div>
+            <ul class="team-card__social">
+              <li>
+                <a href="">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="team-card__item">
+            <div class="team-card_member_image">
+              <img src="assets/img/team/team-member-2.jpeg" alt="">
+            </div>
+            <div class="team-card__content">
+              <label>MARKETING HEAD</label>
+              <h3>Ashley Riordan</h3>
+            </div>
+            <ul class="team-card__social">
+              <li>
+                <a href="">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="team-card__item">
+            <div class="team-card_member_image">
+              <img src="assets/img/team/team-member-3.jpeg" alt="">
+            </div>
+            <div class="team-card__content">
+              <label>MANAGER & QC</label>
+              <h3>Albert Coleman</h3>
+            </div>
+            <ul class="team-card__social">
+              <li>
+                <a href="">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- TEMA SECTION END -->
+
       <!-- BEGIN ADVANTAGES -->
       <div class="about-detail advantages wrapper">
         <div class="advantages__list">
@@ -257,7 +365,6 @@
         </div>
       </div>
       <!-- ADVANTAGES END -->
-
 
       <!-- BEGIN BRANDS -->
       <div class="brands-block wrapper">
